tests/NormalTests/paczka1/small_fuzzy/19271200.err
Error in line 1: SpxgC77wcAP A847 49,0
Error in line 8: A847 A847 42,9
Error in line 10: KuQwMrQD Aff1 96,0
